force-app/main/default/objects/Lead/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>E-Commerce</fullName>
            </value>
            <value>
                <fullName>AI Website</fullName>
            </value>
            <value>
                <fullName>Portfolio</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 